restyle & rename some CSS classes

--- a/webroot/css/casual.css
+++ b/webroot/css/casual.css
@@ -9,13 +9,13 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
-#reportManagerDisplay .reportName {
+.reportTable .reportName {
     font-size: 19pt; 
 	font-weight: bold;
     color: #333333;
 }
 
-#reportManagerDisplay .timestamp {
+.reportTable .timestamp {
     margin-top: 15px;
     font-size: 8pt; 
 	font-weight: normal;
@@ -25,7 +25,7 @@ body {
 }
 
 
-#reportManagerDisplay .report
+.reportTable .report
 {
     margin: 0px;
     padding: 0px;
@@ -41,7 +41,7 @@ body {
     color: #ffffff;
 }
 
-#reportManagerDisplay .report tr.header th
+.reportTable .report tr.header th
 {
     border-top-width: 0px;
     border-bottom-width: 1px;
@@ -56,7 +56,7 @@ body {
 }
 
 
-#reportManagerDisplay .report tr.body td
+.reportTable .report tr.body td
 {
     background: #FFFFFF;
     border-top-width: 0px;
@@ -71,7 +71,7 @@ body {
     color: #555555;
 }
 
-#reportManagerDisplay .report tr.footer td
+.reportTable .report tr.footer td
 {
     background: none;
     border-top-width: 0px;
