--- a/webroot/css/executive.css
+++ b/webroot/css/executive.css
@@ -10,13 +10,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#reportManagerDisplay .reportName {
+.reportTable .reportName {
     font-size: 19pt; 
 	font-weight: bold;
     color: #333333;
 }
 
-#reportManagerDisplay .timestamp {
+.reportTable .timestamp {
     margin-top: 15px;
     font-size: 8pt; 
 	font-weight: normal;
@@ -26,7 +26,7 @@ body {
 }
 
 
-#reportManagerDisplay .report
+.reportTable .report
 {
     margin: 0px;
     padding: 0px;
@@ -42,7 +42,7 @@ body {
     color: #ffffff;
 }
 
-#reportManagerDisplay .report tr.header th
+.reportTable .report tr.header th
 {
     border-top-width: 1px;
     border-bottom-width: 2px;
@@ -57,7 +57,7 @@ body {
 }
 
 
-#reportManagerDisplay .report tr.body td
+.reportTable .report tr.body td
 {
     background: #FFFFFF;
     border-top-width: 0px;
@@ -72,7 +72,7 @@ body {
     color: #555555;
 }
 
-#reportManagerDisplay .report tr.footer td
+.reportTable .report tr.footer td
 {
     background: none;
     border-top-width: 1px;
