--- a/webroot/css/banded.css
+++ b/webroot/css/banded.css
@@ -10,13 +10,13 @@ body {
     font-family: Arial;
 }
 
-#reportManagerDisplay .reportName {
+.reportTable .reportName {
     font-size: 19pt; 
 	font-weight: bold;
     color: #333333;
 }
 
-#reportManagerDisplay .timestamp {
+.reportTable .timestamp {
     margin-top: 15px;
     font-size: 8pt; 
 	font-weight: normal;
@@ -26,7 +26,7 @@ body {
 }
 
 
-#reportManagerDisplay .report
+.reportTable .report
 {
     margin: 0px;
     padding: 0px;
@@ -42,7 +42,7 @@ body {
     color: #ffffff;
 }
 
-#reportManagerDisplay .report tr.header th
+.reportTable .report tr.header th
 {
     background: #333333;
     border-top-width: 0px;
@@ -58,7 +58,7 @@ body {
 }
 
 
-#reportManagerDisplay .report tr.body td
+.reportTable .report tr.body td
 {
     background: none;
     border-top-width: 0px;
@@ -73,7 +73,7 @@ body {
     color: #555555;
 }
 
-#reportManagerDisplay .report tr.footer td
+.reportTable .report tr.footer td
 {
     background: #333333;
     border-top-width: 0px;
