--- a/webroot/css/styled.css
+++ b/webroot/css/styled.css
@@ -37,13 +37,13 @@ h2 {
     padding: 2px 5px;
 }
 
-#reportManagerDisplay .reportName {
+.reportTable .reportName {
     font-size: 19pt; 
 	font-weight: bold;
     color: #333333;
 }
 
-#reportManagerDisplay .timestamp {
+.reportTable .timestamp {
     margin-top: 15px;
     font-size: 8pt; 
 	font-weight: normal;
@@ -52,7 +52,7 @@ h2 {
     clear: both;
 }
 
-#reportManagerDisplay .report
+.reportTable .report
 {
     margin: 0px;
     padding: 0px;
@@ -69,7 +69,7 @@ h2 {
     background-color: #fcfcfc;
 }
 
-#reportManagerDisplay .report tr.header th
+.reportTable .report tr.header th
 {
     background: #857367;
     border-top-width: 1px;
@@ -85,7 +85,7 @@ h2 {
 }
 
 
-#reportManagerDisplay .report tr.body td
+.reportTable .report tr.body td
 {
     background: none;
     border-top-width: 1px;
@@ -100,7 +100,7 @@ h2 {
     color: #555555;
 }
 
-#reportManagerDisplay .report tr.footer td
+.reportTable .report tr.footer td
 {
     background: #333333;
     border-top-width: 1px;
