--- a/webroot/css/generic.css
+++ b/webroot/css/generic.css
@@ -1,7 +1,7 @@
 /**
  * Copyright (c) 2013 TribeHR Corp - http://tribehr.com
  * Copyright (c) 2012 Luis E. S. Dias - www.smartbyte.com.br
- * 
+ *
  * Licensed under The MIT License. See LICENSE file for details.
  * Redistributions of files must retain the above copyright notice.
  */
@@ -18,14 +18,14 @@ img.logo {
 }
 
 .reportTable .reportName {
-    font-size: 19pt; 
+    font-size: 19pt;
 	font-weight: bold;
     color: #333333;
 }
 
 .reportTable .timestamp {
     margin-top: 15px;
-    font-size: 8pt; 
+    font-size: 8pt;
 	font-weight: normal;
     color: #333333;
     float: left;
@@ -49,44 +49,41 @@ img.logo {
     color: #ffffff;
 }
 
-.reportTable .report tr.header th
-{
-    padding: 4px 4px 4px 4px;
+.reportTable .report tr.header th,
+.reportTable .report tr.body td,
+.reportTable .report tr.footer td {
+    padding: 4px 6px;
+    white-space: nowrap;
 }
 
-
-.reportTable .report tr.body td
-{
-    padding: 4px 4px 4px 4px;
-}
-
-.reportTable .report tr.footer td
-{
-    padding: 4px 4px 4px 4px;
+.reportTable .report tr.body td,
+.reportTable .report tr.footer td {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .floatRight {
     float:right !important
 }
 
-#copyright { 
-    font: normal normal 8pt; 
-    float: left; 
+#copyright {
+    font: normal normal 8pt;
+    float: left;
     clear: both;
 }
 
-.counter { 
-    float: left; 
-    clear: both; 
+.counter {
+    float: left;
+    clear: both;
     font-size: 9pt;
 	font-weight: normal;
     margin-top: 10px;
     page-break-after: always;
-    margin-bottom: 10px;    
+    margin-bottom: 10px;
 }
 
 table {
-    float: left; 
+    float: left;
     clear: both;
     table-layout: fixed;
 }
