--- a/webroot/css/styled.css
+++ b/webroot/css/styled.css
@@ -1,6 +1,6 @@
 /**
  * Copyright (c) 2013 TribeHR Corp - http://tribehr.com
- * 
+ *
  * Licensed under The MIT License. See LICENSE file for details.
  * Redistributions of files must retain the above copyright notice.
  */
@@ -37,84 +37,41 @@ h2 {
     padding: 2px 5px;
 }
 
-.reportTable .reportName {
-    font-size: 19pt; 
-	font-weight: bold;
-    color: #333333;
-}
+/* .reportTable .reportName inherit */
 
-.reportTable .timestamp {
-    margin-top: 15px;
-    font-size: 8pt; 
-	font-weight: normal;
-    color: #333333;
-    float: left;
-    clear: both;
-}
+/* .reportTable .timestamp inherit */
 
-.reportTable .report
-{
-    margin: 0px;
-    padding: 0px;
-    border-top-width: 0px;
-    border-bottom-width: 0px;
-    border-left-width: 0px;
-    border-right-width: 0px;
-    border-style: none;
-    border-color: #cccccc;
-    border-collapse: collapse;
-    font-size: 11pt;
-	font-weight: bold;
-    color: #ffffff;
+.reportTable .report {
     background-color: #fcfcfc;
+    /* rest inherit */
 }
 
-.reportTable .report tr.header th
-{
+.reportTable .report tr.header th,
+.reportTable .report tr.body td,
+.reportTable .report tr.footer td {
+    border: 1px none #ffffff;
+    text-align: left;
+    font-weight: normal;
+    font-size: 9pt;
+    color: #ffffff;
+}
+
+.reportTable .report tr.header th {
     background: #857367;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-style: none;
     border-color: #e4d9ce;
     font-size: 10pt;
-	font-weight: normal;
-    color: #ffffff;
-    text-align: left;
 }
 
-
-.reportTable .report tr.body td
-{
+.reportTable .report tr.body td {
     background: none;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-style: none;
-    border-color: #fff;
-    text-align: left;
-    font-size: 9pt;
-	font-weight: normal;
     color: #555555;
 }
 
-.reportTable .report tr.footer td
-{
+.reportTable .report tr.footer td {
     background: #333333;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
     border-style: solid;
-    border-color: #fff;
-    font-size: 9pt;
-	font-weight: normal;
-    color: #ffffff;
-    text-align: left;
 }
 
-.altrow { 
+.altrow {
     background-color: #F2F2F2;
 }
